--- a/package.json
+++ b/package.json
@@ -38,88 +38,89 @@
     "@deckdeckgo/highlight-code": "^2.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/styles": "^4.10.0",
-    "@sentry/gatsby": "^5.29.2",
-    "@sentry/tracing": "^5.29.2",
+    "@sentry/gatsby": "^6.11.0",
+    "@sentry/tracing": "^6.11.0",
     "bluebird": "^3.7.2",
-    "classnames": "^2.2.6",
-    "codecov": "^3.7.2",
-    "gatsby": "^2.24.57",
-    "gatsby-link": "^2.4.13",
-    "gatsby-plugin-catch-links": "^2.3.11",
-    "gatsby-plugin-feed": "^2.5.11",
-    "gatsby-plugin-flow": "^1.3.11",
-    "gatsby-plugin-google-gtag": "^2.1.10",
-    "gatsby-plugin-manifest": "^2.4.28",
+    "classnames": "^2.3.1",
+    "codecov": "^3.8.3",
+    "gatsby": "^2.32.13",
+    "gatsby-link": "^2.11.0",
+    "gatsby-plugin-catch-links": "^2.10.0",
+    "gatsby-plugin-feed": "^2.13.1",
+    "gatsby-plugin-flow": "^1.10.0",
+    "gatsby-plugin-google-gtag": "^2.8.0",
+    "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-material-ui": "^2.1.10",
-    "gatsby-plugin-offline": "^3.2.27",
-    "gatsby-plugin-optimize-svgs": "^1.0.4",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.6.35",
-    "gatsby-plugin-sitemap": "^2.4.12",
+    "gatsby-plugin-offline": "^3.10.2",
+    "gatsby-plugin-optimize-svgs": "^1.0.5",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sass": "^3.2.0",
+    "gatsby-plugin-sharp": "^2.14.4",
+    "gatsby-plugin-sitemap": "^2.12.0",
     "gatsby-plugin-twitter": "^2.3.12",
-    "gatsby-remark-autolink-headers": "^2.3.12",
-    "gatsby-remark-copy-linked-files": "^2.3.14",
+    "gatsby-remark-autolink-headers": "^2.11.0",
+    "gatsby-remark-copy-linked-files": "^2.10.0",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-highlight-code": "^2.1.0",
-    "gatsby-remark-images": "^3.3.29",
-    "gatsby-remark-katex": "^3.3.11",
-    "gatsby-remark-prismjs": "^3.5.11",
+    "gatsby-remark-images": "^3.11.1",
+    "gatsby-remark-katex": "^3.10.0",
+    "gatsby-remark-prismjs": "^3.13.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^2.4.13",
-    "gatsby-remark-smartypants": "^2.3.10",
-    "gatsby-source-filesystem": "^2.3.29",
-    "gatsby-transformer-remark": "^2.8.35",
-    "gatsby-transformer-sharp": "^2.5.14",
+    "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-remark-smartypants": "^2.10.0",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^2.12.1",
     "invariant": "^2.2.4",
-    "katex": "^0.12.0",
-    "lodash": "^4.17.20",
+    "katex": "^0.13.24",
+    "lodash": "^4.17.21",
     "moment": "^2.28.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "normalize-scss": "^7.0.1",
-    "prismjs": "^1.21.0",
-    "react": "^16.14.0",
+    "prismjs": "^1.25.0",
+    "react": "^17.0.2",
     "react-disqus-comments": "^1.4.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "7.11.6",
-    "@babel/plugin-proposal-class-properties": "7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "7.11.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
-    "@babel/preset-env": "7.11.5",
-    "@babel/preset-react": "7.10.4",
-    "autoprefixer": "9.8.6",
+    "@babel/core": "7.15.8",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "7.14.5",
+    "@babel/plugin-transform-flow-strip-types": "^7.14.5",
+    "@babel/preset-env": "7.15.8",
+    "@babel/preset-react": "7.14.5",
+    "autoprefixer": "9.8.8",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
-    "babel-jest": "26.3.0",
-    "babel-preset-gatsby": "0.5.9",
-    "browserslist": "4.14.2",
-    "concurrently": "5.3.0",
-    "eslint": "7.8.1",
-    "eslint-config-airbnb-base": "14.2.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jest": "24.0.0",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.20.6",
+    "babel-jest": "26.6.3",
+    "babel-preset-gatsby": "0.12.3",
+    "browserslist": "4.16.8",
+    "concurrently": "6.2.2",
+    "eslint": "7.26.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.3.7",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.2",
     "eslint-watch": "7.0.0",
     "flow-bin": "^0.133.0",
-    "flow-typed": "^3.2.1",
-    "gh-pages": "3.1.0",
+    "flow-typed": "^3.3.1",
+    "gh-pages": "3.2.3",
     "husky": "^4.3.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.4.2",
-    "jest-cli": "26.4.2",
+    "jest": "26.6.3",
+    "jest-cli": "26.6.3",
     "postcss-pxtorem": "5.1.1",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
-    "react-test-renderer": "16.13.1",
+    "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
-    "stylelint": "13.7.1",
-    "stylelint-config-recommended-scss": "4.2.0",
-    "stylelint-scss": "3.18.0"
+    "sass": "^1.42.1",
+    "stylelint": "13.13.1",
+    "stylelint-config-recommended-scss": "4.3.0",
+    "stylelint-scss": "4.0.0"
   },
   "husky": {
     "hooks": {
